fixed alignment of text in various buttons

--- a/app/assets/stylesheets/api/main_page/main_page_nav.scss
+++ b/app/assets/stylesheets/api/main_page/main_page_nav.scss
@@ -56,6 +56,8 @@
   display: inline-block;
   cursor: pointer;
   text-align: right;
+  align-items: center;
+  justify-content: space-around;
   margin-right: 20px;
   box-sizing: border-box;
   font-weight: 500;
